tested the safe points log