@@ -171,7 +171,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+            <configuration>
+<argLine>
+-XX:+UnlockDiagnosticVMOptions -Xlog:safepoint*:file=safepoint.log:time:filecount=5,filesize=10M -Xlog:gc*:file=gc.log:time:filecount=5,filesize=10M
+</argLine>
+            </configuration>
+            </plugin>
         </plugins>
+
     </build>
 
     <profiles>
